--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "soundfile>=0.13.1",
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
+    "httpx>=0.27.0",
 ]
 
 [[tool.uv.index]]
